--- a/conf/app.conf
+++ b/conf/app.conf
@@ -1,15 +1,15 @@
-appname = PPGo_ApiAdmin
-httpport = 8081
+appname = BaseAdmin
+httpport = 8080
 runmode = dev
 
 # 站点名称
-site.name = API管理平台
+site.name = 管理后台基础框架
 
 # 数据库配置
 db.host = 127.0.0.1
 db.user = root
-db.password = "123456" 
+db.password = "pureblood"
 db.port = 3306
-db.name = ppgo_api_admin
+db.name = base_admin
 db.prefix = pp_
 db.timezone = Asia/Shanghai
